<resources>
    <string name="app_name">Rent-Scio1</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this prototype.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="accedi_o_registrati">Accedi o Registrati</string>
    <string name="logo_applicazione">Logo Applicazione</string>
    <string name="accedi">Accedi</string>
    <string name="registrati_startup">Registrati</string>
    <string name="Accedi">Button</string>
    <string name="password_register">Password</string>
    <string name="email_login">Email</string>
    <string name="commerciante">Commerciante</string>
    <string name="partita_iva">Partita IVA</string>
    <string name="registrati_confirm">Registrati</string>
    <string name="cognome">Cognome</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="password_login">Password</string>
    <string name="data_di_nascita">Data di Nascita</string>
    <string name="phone">Phone</string>
    <string name="cliente">Cliente</string>
    <string name="title_activity_maps_trader">Map</string>
    <string name="edit_message">Inserisci la tua mail e la password</string>
    <string name="hai_gi_un_account_accedi">Hai già un account? Accedi</string>
    <string name="inserisci_la_tua_mail_e_la_password">Inserisci la tua mail e la password</string>
    <string name="collegamento1">Collegamento1</string>
    <string name="ottieni_la_tua_posisizione">Ottieni la tua posisizione</string>
    <string name="benvenuto_in">Benvenuto in</string>
    <string name="rent_sci">RENT-SCIÒ</string>
    <string name="inserisci_la_tua_mail_e_la_password_per_poter_accedere_ai_servizi_di_rent_sci">Inserisci la tua mail e la password per poter accedere ai servizi di RENT-SCIÒ</string>
    <string name="textview">TextView</string>
    <string name="ottieni_la_tua_posizione">Ottieni la tua posizione</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="assistenzaBtn">assistenza</string>

    <string name="visualizza_parco_mezzi">Visualizza parco mezzi</string>
    <string name="nuova_corsa">Nuova corsa</string>
    <string name="logout">Logout</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="inserisci_la_tua_email_e_la_password">Inserisci la tua email e la password</string>
    <string name="benvenuto_in_rent_sci">Benvenuto in RENT-SCIÒ</string>
    <string name="tipo_veicolo">Tipo veicolo</string>
    <string name="id">ID</string>
    <string name="veicolo">Veicolo</string>
    <string name="disponibilit">Disponibilità</string>
    <string name="posti_a_sedere">Posti a sedere</string>
    <string name="posti">Posti</string>
    <string name="qui_puoi_vedere_i_tuoi_mezzi_tocca_il_pulsante_nuovo_per_aggiungere_un_veicolo_al_tuo_negozio_oppure_tocca_elimina_se_vuoi_levarlo_definitivamente">Qui puoi vedere i tuoi mezzi. Tocca il pulsante Nuovo per aggiungere un veicolo al tuo negozio. Oppure tocca Elimina se vuoi levarlo definitivamente.</string>
    <string name="elimina_veicolo">ELIMINA VEICOLO</string>
    <string name="aggiungi_veicolo">AGGIUNGI VEICOLO</string>
    <string name="elimina" />
    <string name="nuovo" />
    <string name="seleziona_il_tipo_di_veicolo_e_la_quantit_di_posti_a_sedere_presenti">Seleziona il tipo di veicolo e la quantità di posti a sedere presenti.</string>
    <string name="conferma">Conferma</string>
    <string name="per_poter_rimuovere_un_veicolo_clicca_seleziona_un_veicolo_e_poi_seleziona_il_mezzo_da_rimuovere">Per poter iniziare una nuova corsa clicca <u><i>Seleziona un veicolo</i></u>. Seleziona il mezzo con cui far partire il noleggio e infine <u><i>Conferma</i></u>.</string>
    <string name="ops_la_tua_tabella_vuota_prima_di_avviare_una_nuova_corsa_assicurati_di_avere_almeno_un_veicolo_disponibile">Ops… La tua tabella è vuota. Prima di avviare una nuova corsa assicurati di avere almeno un veicolo disponibile!</string>
    <string name="conferma_eliminazione_tabella">CONFERMA</string>
    <string name="registrati">REGISTRATI</string>
    <string name="imposta_area_limitata">Imposta area limitata</string>
    <string name="costruisci">Costruisci</string>
    <string name="elimina_ultimo_mark">Elimina ultimo mark</string>
    <string name="pulisci_area">Pulisci area</string>
    <string name="elimina_l_ultimo">Elimina l\'ultimo</string>
    <string name="conferma_modifiche">Conferma modifiche</string>
    <string name="nome_negozio">Nome Negozio</string>
    <string name="registrati_">Registrati</string>
    <string name="conferma_password">Conferma password</string>
    <string name="seleziona_un_veicolo">- Seleziona un veicolo</string>
    <string name="seleziona_un_veicolo_">Seleziona un veicolo</string>
    <string name="clicca_seleziona_un_veicolo">Clicca <i>Seleziona un veicolo</i></string>
    <string name="una_volta_scelto_il_mezzo_conferma">Una volta scelto il mezzo, conferma!</string>
    <string name="personalizza_il_tuo_veicolo">Personalizza il tuo veicolo</string>
    <string name="personalizza_il_tuo_veicolo_">Personalizza il tuo veicolo!</string>
    <string name="ramma">RAMMA</string>
    <string name="corse_attive">Corse attive</string>
    <string name="tempo_rimasto">Tempo rimasto</string>
    <string name="assistenza">Assistenza</string>
    <string name="ritorno_al_negozio">Ritorno al negozio</string>
    <string name="non_ci_sono_corse_attive_al_momento">Non ci sono corse attive al momento.</string>

</resources>