<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nuova_corsa"
            android:title="@string/nuova_corsa"
            android:icon="@drawable/ic_add_map_trader_"
            app:itemTextAppearance="@style/Style_TextView"/>

        <item android:id="@+id/Parco_mezzi"
            android:title="@string/visualizza_parco_mezzi"
            android:icon="@drawable/ic_parcomezzi_map_trader"
            app:itemTextAppearance="@style/Style_TextView"/>

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout_map_trader"
            android:title="@string/logout"
            app:itemTextAppearance="@style/Style_TextView"/>
    </group>
</menu>