<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".StartActivity"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <Button
        android:id="@+id/login_btn"
        android:layout_width="323dp"
        android:layout_height="85dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/comfortaa_light"
        android:gravity="center_horizontal"
        android:onClick="@string/accedi"
        android:text="@string/hai_gi_un_account_accedi"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/register_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="195dp"
        android:layout_height="59dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/registrati_startup"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="282dp"
        android:layout_height="65dp"
        android:layout_marginBottom="192dp"
        android:fontFamily="@font/comfortaa_light"

        android:text="@string/benvenuto_in"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#7198F1"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="238dp"
        android:layout_height="71dp"
        android:fontFamily="@font/comfortaa_light"
        android:shadowColor="#1C2BB3"
        android:text="@string/rent_sci"
        android:textAlignment="center"
        android:textColor="#7198F1"
        android:textDirection="locale"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.174" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="110dp"
        android:layout_height="116dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="222dp"
        android:layout_height="56dp"
        android:fontFamily="@font/comfortaa_light"
        android:text="RAMMA"
        android:textAlignment="center"
        android:textColor="#7198F1"
        android:textSize="36sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.275" />

</androidx.constraintlayout.widget.ConstraintLayout>