<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/back"
        android:textAlignment="center">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/back"
            android:theme="@style/ToolbarTheme"/>

        <EditText
            android:id="@+id/piva"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            android:autofillHints=""
            android:backgroundTint="@color/text"
            android:ems="10"
            android:fontFamily="@font/comfortaa_regular"
            android:hint="@string/partita_iva"
            android:inputType="textPersonName"
            android:textColor="@color/teal_200"
            android:textColorHint="@color/text"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_register" />

        <CheckBox
            android:id="@+id/checkPositionTrader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="10dp"
            android:buttonTint="@color/text"
            android:fontFamily="@font/comfortaa_regular"
            android:text="@string/ottieni_la_tua_posizione"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/progressBarregister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/piva"
            app:layout_constraintVertical_bias="1.0" />

        <CheckBox
            android:id="@+id/check_Trader"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="8dp"
            android:buttonTint="@color/text"
            android:fontFamily="@font/comfortaa_regular"
            android:text="@string/commerciante"
            android:textColor="@color/text"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBarregister"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/confitmregister_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/piva" />

        <EditText
            android:id="@+id/sourname"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:backgroundTint="@color/text"
            android:ems="10"
            android:fontFamily="@font/comfortaa_regular"
            android:hint="@string/cognome"
            android:inputType="textPersonName"
            android:textColor="@color/teal_200"
            android:textColorHint="@color/text"
            app:layout_constraintBottom_toTopOf="@+id/email_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <EditText
            android:id="@+id/email_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:backgroundTint="@color/text"
            android:ems="10"
            android:fontFamily="@font/comfortaa_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/teal_200"
            android:textColorHint="@color/text"
            app:layout_constraintBottom_toTopOf="@+id/password_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sourname" />

        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:backgroundTint="@color/text"
            android:ems="10"
            android:fontFamily="@font/comfortaa_regular"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            android:textColor="@color/teal_200"
            android:textColorHint="@color/text"
            app:layout_constraintBottom_toTopOf="@+id/sourname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/check_Trader" />

        <EditText
            android:id="@+id/password_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="9dp"
            android:autofillHints=""
            android:backgroundTint="@color/text"
            android:ems="10"
            android:fontFamily="@font/comfortaa_regular"
            android:hint="@string/password_register"
            android:inputType="textPassword"
            android:textColor="@color/teal_200"
            android:textColorHint="@color/text"
            app:layout_constraintBottom_toTopOf="@+id/passwordregister_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_register" />

        <EditText
            android:id="@+id/passwordregister_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:backgroundTint="@color/text"
            android:ems="10"
            android:fontFamily="@font/comfortaa_regular"
            android:hint="@string/password_register"
            android:inputType="textPassword"
            android:textColor="@color/teal_200"
            android:textColorHint="@color/text"
            app:layout_constraintBottom_toTopOf="@+id/dateBorn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_register"
            app:layout_constraintVertical_bias="0.0" />


        <EditText
            android:id="@+id/phone_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            android:autofillHints=""
            android:backgroundTint="@color/text"
            android:ems="10"
            android:fontFamily="@font/comfortaa_regular"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textColor="@color/teal_200"
            android:textColorHint="@color/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateBorn" />

        <EditText
            android:id="@+id/dateBorn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:backgroundTint="@color/text"
            android:ems="10"
            android:fontFamily="@font/comfortaa_regular"
            android:hint="@string/data_di_nascita"
            android:inputType="date"
            android:textColor="@color/teal_200"
            android:textColorHint="@color/text"
            app:layout_constraintBottom_toTopOf="@+id/phone_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordregister_confirm" />


        <EditText
            android:id="@+id/shopName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/text"
            android:ems="10"
            android:fontFamily="@font/comfortaa_regular"
            android:hint="@string/nome_negozio"
            android:inputType="textPersonName"
            android:textColor="@color/teal_200"
            android:textColorHint="@color/text"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/checkPositionTrader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/piva"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/confitmregister_btn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="35dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/comfortaa_regular"
            android:text="@string/registrati"
            android:textColor="@color/back"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/piva"
            app:layout_constraintVertical_bias="0.918" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>