<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".TabellaCorseTrader">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_trader_list"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:theme="@style/ToolbarTheme"
        android:visibility="visible"
        app:menu="@menu/trade_table_toolbar_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:titleTextColor="@color/back" />

    <ScrollView
        android:id="@+id/scrollview_table_trade"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="horizontal|vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/toolbar_trader_list"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_trader_list"
        app:layout_constraintVertical_bias="0.0">

        <HorizontalScrollView
            android:id="@+id/horizontalView_table_trade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:scrollbars="horizontal|vertical"
            app:layout_constraintBottom_toTopOf="@+id/scrollview_table_trade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TableLayout
                android:id="@+id/tabella_corse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_tablelayout"
                android:paddingTop="30dp"
                android:stretchColumns="1"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.937"
                app:layout_constraintStart_toStartOf="@+id/toolbar_trader_list"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_trader_list"
                app:layout_constraintVertical_bias="0.02">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/border_tablelayout"
                        android:fontFamily="@font/comfortaa_regular"
                        android:gravity="center"
                        android:text="@string/cliente"
                        android:textColor="@color/text"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/border_tablelayout"
                        android:fontFamily="@font/comfortaa_regular"
                        android:gravity="center"
                        android:text="@string/veicolo"
                        android:textColor="@color/text"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/border_tablelayout"
                        android:fontFamily="@font/comfortaa_regular"
                        android:gravity="center"
                        android:text="@string/tempo_rimasto"
                        android:textColor="@color/text"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>

</LinearLayout>